[package]
name = "quisquis-rust"
version = "0.1.0"
authors = ["Hammad Tariq <hammadtariq@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quisquislib"
path = "src/lib.rs"

[[bin]]
name = "quisquisbin"
path = "src/bin.rs"

[dependencies]
hex = "*"
merlin = { version = "2", default-features = false }
bincode = "*"
rand = "0.7"
anyhow = "1.0"
sha3 = "0.9.1"
sha2 = { version = "0.9", default-features = false }
bs58 = "0.4.0"
array2d = "0.2.1"
itertools = "0.10.1"
# serde = { version = "1.0", features=["derive"] }
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
#curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "serde"] }
curve25519-dalek = { version = "3", default-features = false }
[dependencies.ed25519-dalek]
version = "1"



[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[dependencies.zkschnorr]
git = "ssh://github.com/twilight-project/ZkSchnorr.git"
