[package]
name = "quisquis-rust"
version = "0.1.1"
edition = "2021"
description = "A Rust implementation of Quisquis, a privacy-preserving cryptocurrency protocol"
homepage = "https://github.com/twilight-project/quisquis-rust"
repository = "https://github.com/twilight-project/quisquis-rust"
documentation = "https://docs.rs/quisquis-rust"
readme = "README.md"
keywords = ["cryptography", "privacy", "cryptocurrency", "zero-knowledge", "blockchain"]
categories = ["cryptography", "algorithms", "no-std"]
exclude = ["target/", ".git/", ".github/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "quisquislib"
path = "src/lib.rs"

[[bin]]
name = "quisquisbin"
path = "src/bin.rs"

[dependencies]
hex = "0.4"
merlin = { version = "2", default-features = false }
bincode = "1"
rand = "0.7"
anyhow = "1.0"
sha3 = "0.9.1"
sha2 = { version = "0.9", default-features = false }
bs58 = "0.4.0"
array2d = "0.2.1"
itertools = "0.10.1"
# serde = { version = "1.0", features=["derive"] }
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
#curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "serde"] }
curve25519-dalek = { version = "3", default-features = false }
[dependencies.ed25519-dalek]
version = "1"

[features]
debug_print = []  # Define a custom feature for enabling debug prints


[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

[dependencies.zkschnorr]
git = "https://github.com/twilight-project/zk-schnorr.git"
tag = "Testnet-v1.0.0"
