[package]
name = "quisquis-rust"
version = "0.1.2"
edition = "2021"
description = "A Rust implementation of Quisquis, a privacy-preserving cryptocurrency protocol"
homepage = "https://github.com/twilight-project/quisquis-rust"
repository = "https://github.com/twilight-project/quisquis-rust"
documentation = "https://docs.rs/quisquis-rust"
readme = "README.md"
keywords = ["cryptography", "privacy", "cryptocurrency", "zero-knowledge", "blockchain"]
categories = ["cryptography", "algorithms", "no-std"]
exclude = ["target/", ".git/", ".github/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "quisquislib"
path = "src/lib.rs"

[[bin]]
name = "quisquisbin"
path = "src/bin.rs"

[dependencies]
hex = "0.4"
merlin = { version = "3", default-features = false }
bincode = "1"
rand = "0.8"
anyhow = "1.0"
sha3 = "0.10"
sha2 = { version = "0.10", default-features = false }
bs58 = "0.4.0"
array2d = "0.2.1"
itertools = "0.10.1"
serde = { version = "1.0", features=["derive"] }

serde_json = "1.0"
curve25519-dalek = { version = "4", default-features = false, features = ["serde","rand_core", "alloc", "precomputed-tables"] }

#bulletproofs = { version = "5.0.0", features = ["yoloproofs"] }
[dependencies.bulletproofs]
# Using git dependency until 5.0.1+ is released to crates.io
# Issue: 5.0.0 on crates.io has CtOption incompatibility with curve25519-dalek 4.x
# Fix: Already merged in upstream but not yet released
# TODO: Switch back to crates.io when 5.0.1+ is released
git = "https://github.com/dalek-cryptography/bulletproofs.git"
rev = "04bce4e66013ff857ed462fd4206210544101461"  # Replace with the commit hash that has the fix
features = ["yoloproofs"]


[features]
debug_print = []  # Define a custom feature for enabling debug prints


#[dependencies.bulletproofs]
#path = "../bulletproofs"
#features = ["yoloproofs"]

[dependencies.zkschnorr]
git = "https://github.com/twilight-project/zk-schnorr.git"
tag = "v0.2.0"


# Patch bulletproofs to fix CtOption compatibility
#[patch.crates-io]
#bulletproofs = { git = "https://github.com/zkcrypto/bulletproofs.git", branch = "main" }